# ros2-sensor-simulator

./: Dockerfile  README.md
src/sensor_pkg/: package.xml  setup.py
src/sensor_pkg/launch/: sensor_launch.py
src/sensor_pkg/sensor_pkg/: publisher.py  subscriber.py
