<?xml version="1.0"?>
<package format="3">
  <name>sensor_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 sensor simulator</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>